@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -16,8 +16,6 @@ import static org.openhab.binding.atlona.internal.AtlonaBindingConstants.*;
 
 import java.util.Collections;
 import java.util.Set;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 import org.openhab.binding.atlona.internal.pro3.AtlonaPro3Capabilities;
 import org.openhab.binding.atlona.internal.pro3.AtlonaPro3Handler;
@@ -35,6 +33,7 @@ import org.slf4j.LoggerFactory;
  * handlers.
  *
  * @author Tim Roberts - Initial contribution
+ * @author Michael Lobstein - Add support for AT-PRO3HD66M
  */
 @Component(service = ThingHandlerFactory.class, configurationPid = "binding.atlona")
 public class AtlonaHandlerFactory extends BaseThingHandlerFactory {
@@ -44,9 +43,8 @@ public class AtlonaHandlerFactory extends BaseThingHandlerFactory {
     /**
      * The set of supported Atlona products
      */
-    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Collections.unmodifiableSet(
-            Stream.of(THING_TYPE_PRO3_44M, THING_TYPE_PRO3_66M, THING_TYPE_PRO3_88M, THING_TYPE_PRO3_1616M)
-                    .collect(Collectors.toSet()));
+    private static final Set<ThingTypeUID> SUPPORTED_THING_TYPES_UIDS = Set.of(THING_TYPE_PRO3_44M, THING_TYPE_PRO3_66M,
+            THING_TYPE_PRO3_88M, THING_TYPE_PRO3_1616M, THING_TYPE_PRO3HD_66M);
 
     /**
      * {@inheritDoc}
@@ -65,30 +63,26 @@ public class AtlonaHandlerFactory extends BaseThingHandlerFactory {
      */
     @Override
     protected ThingHandler createHandler(Thing thing) {
-        if (thing == null) {
-            logger.error("createHandler was given a null thing!");
-            return null;
-        }
-
         ThingTypeUID thingTypeUID = thing.getThingTypeUID();
 
         if (thingTypeUID.equals(THING_TYPE_PRO3_44M)) {
-            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(5, 3, Collections.singleton(5)));
+            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(5, 3, Collections.singleton(5), true));
         }
 
         if (thingTypeUID.equals(THING_TYPE_PRO3_66M)) {
-            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(8, 4,
-                    Collections.unmodifiableSet(Stream.of(6, 8).collect(Collectors.toSet()))));
+            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(8, 4, Set.of(6, 8), true));
         }
 
         if (thingTypeUID.equals(THING_TYPE_PRO3_88M)) {
-            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(10, 6,
-                    Collections.unmodifiableSet(Stream.of(8, 10).collect(Collectors.toSet()))));
+            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(10, 6, Set.of(8, 10), true));
         }
 
         if (thingTypeUID.equals(THING_TYPE_PRO3_1616M)) {
-            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(5, 3,
-                    Collections.unmodifiableSet(Stream.of(17, 18, 19, 20).collect(Collectors.toSet()))));
+            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(5, 3, Set.of(17, 18, 19, 20), true));
+        }
+
+        if (thingTypeUID.equals(THING_TYPE_PRO3HD_66M)) {
+            return new AtlonaPro3Handler(thing, new AtlonaPro3Capabilities(0, 0, Set.of(1, 2, 3, 4, 5, 6), false));
         }
 
         logger.warn("Unknown binding: {}: {}", thingTypeUID.getId(), thingTypeUID.getBindingId());
