@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -12,7 +12,6 @@
  */
 package org.openhab.binding.avmfritz.internal.dto;
 
-import java.util.Collections;
 import java.util.List;
 
 import javax.xml.bind.annotation.XmlAccessType;
@@ -31,6 +30,7 @@ import javax.xml.bind.annotation.XmlType;
 public class DeviceModel extends AVMFritzBaseModel {
 
     private TemperatureModel temperature;
+    private HumidityModel humidity;
     private AlertModel alert;
 
     @XmlElement(name = "button", type = ButtonModel.class)
@@ -46,6 +46,14 @@ public class DeviceModel extends AVMFritzBaseModel {
         this.temperature = temperatureModel;
     }
 
+    public HumidityModel getHumidity() {
+        return humidity;
+    }
+
+    public void setHumidity(HumidityModel humidityModel) {
+        this.humidity = humidityModel;
+    }
+
     public AlertModel getAlert() {
         return alert;
     }
@@ -55,10 +63,7 @@ public class DeviceModel extends AVMFritzBaseModel {
     }
 
     public List<ButtonModel> getButtons() {
-        if (buttons == null) {
-            return Collections.emptyList();
-        }
-        return buttons;
+        return buttons == null ? List.of() : buttons;
     }
 
     public void setButtons(List<ButtonModel> buttons) {
@@ -75,8 +80,8 @@ public class DeviceModel extends AVMFritzBaseModel {
 
     @Override
     public String toString() {
-        return new StringBuilder().append(super.toString()).append(temperature).append(",").append(alert).append(",")
-                .append(getButtons()).append(",").append(etsiunitinfo).append("]").toString();
+        return new StringBuilder().append(super.toString()).append(temperature).append(",").append(humidity).append(",")
+                .append(alert).append(",").append(getButtons()).append(",").append(etsiunitinfo).append("]").toString();
     }
 
     @XmlAccessorType(XmlAccessType.FIELD)
