@@ -1,5 +1,5 @@
 /**
- * Copyright (c) 2010-2020 Contributors to the openHAB project
+ * Copyright (c) 2010-2021 Contributors to the openHAB project
  *
  * See the NOTICE file(s) distributed with this work for additional
  * information.
@@ -15,32 +15,35 @@ package org.openhab.binding.enocean.internal.handler;
 import static org.openhab.binding.enocean.internal.EnOceanBindingConstants.*;
 
 import java.io.IOException;
-import java.math.BigDecimal;
 import java.util.Arrays;
 import java.util.Collection;
-import java.util.HashSet;
 import java.util.LinkedList;
 import java.util.Set;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
+import java.util.stream.Collectors;
 
 import org.openhab.binding.enocean.internal.EnOceanConfigStatusMessage;
 import org.openhab.binding.enocean.internal.config.EnOceanBaseConfig;
 import org.openhab.binding.enocean.internal.config.EnOceanBridgeConfig;
+import org.openhab.binding.enocean.internal.config.EnOceanBridgeConfig.ESPVersion;
 import org.openhab.binding.enocean.internal.messages.BasePacket;
-import org.openhab.binding.enocean.internal.messages.BaseResponse;
 import org.openhab.binding.enocean.internal.messages.ESP3PacketFactory;
-import org.openhab.binding.enocean.internal.messages.RDBaseIdResponse;
-import org.openhab.binding.enocean.internal.messages.RDRepeaterResponse;
-import org.openhab.binding.enocean.internal.messages.RDVersionResponse;
 import org.openhab.binding.enocean.internal.messages.Response;
 import org.openhab.binding.enocean.internal.messages.Response.ResponseType;
+import org.openhab.binding.enocean.internal.messages.Responses.BaseResponse;
+import org.openhab.binding.enocean.internal.messages.Responses.RDBaseIdResponse;
+import org.openhab.binding.enocean.internal.messages.Responses.RDLearnedClientsResponse;
+import org.openhab.binding.enocean.internal.messages.Responses.RDLearnedClientsResponse.LearnedClient;
+import org.openhab.binding.enocean.internal.messages.Responses.RDRepeaterResponse;
+import org.openhab.binding.enocean.internal.messages.Responses.RDVersionResponse;
 import org.openhab.binding.enocean.internal.transceiver.EnOceanESP2Transceiver;
 import org.openhab.binding.enocean.internal.transceiver.EnOceanESP3Transceiver;
 import org.openhab.binding.enocean.internal.transceiver.EnOceanTransceiver;
 import org.openhab.binding.enocean.internal.transceiver.PacketListener;
 import org.openhab.binding.enocean.internal.transceiver.ResponseListener;
 import org.openhab.binding.enocean.internal.transceiver.ResponseListenerIgnoringTimeouts;
+import org.openhab.binding.enocean.internal.transceiver.TeachInListener;
 import org.openhab.binding.enocean.internal.transceiver.TransceiverErrorListener;
 import org.openhab.core.config.core.Configuration;
 import org.openhab.core.config.core.status.ConfigStatusMessage;
@@ -70,7 +73,7 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
 
     private Logger logger = LoggerFactory.getLogger(EnOceanBridgeHandler.class);
 
-    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = new HashSet<>(Arrays.asList(THING_TYPE_BRIDGE));
+    public static final Set<ThingTypeUID> SUPPORTED_THING_TYPES = Set.of(THING_TYPE_BRIDGE);
 
     private EnOceanTransceiver transceiver; // holds connection to serial/tcp port and sends/receives messages
     private ScheduledFuture<?> connectorTask; // is used for reconnection if something goes wrong
@@ -78,8 +81,11 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
     private byte[] baseId = null;
     private Thing[] sendingThings = new Thing[128];
 
-    private int nextSenderId = 0;
     private SerialPortManager serialPortManager;
+
+    private boolean smackAvailable = false;
+    private boolean sendTeachOuts = true;
+    private Set<String> smackClients = Set.of();
 
     public EnOceanBridgeHandler(Bridge bridge, SerialPortManager serialPortManager) {
         super(bridge);
@@ -159,13 +165,6 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_ERROR,
                     "SerialPortManager could not be found");
         } else {
-            Object devId = getConfig().get(NEXTSENDERID);
-            if (devId != null) {
-                nextSenderId = ((BigDecimal) devId).intValue();
-            } else {
-                nextSenderId = 0;
-            }
-
             if (connectorTask == null || connectorTask.isDone()) {
                 connectorTask = scheduler.scheduleWithFixedDelay(new Runnable() {
                     @Override
@@ -189,9 +188,12 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
             switch (c.getESPVersion()) {
                 case ESP2:
                     transceiver = new EnOceanESP2Transceiver(c.path, this, scheduler, serialPortManager);
+                    smackAvailable = false;
+                    sendTeachOuts = false;
                     break;
                 case ESP3:
                     transceiver = new EnOceanESP3Transceiver(c.path, this, scheduler, serialPortManager);
+                    sendTeachOuts = c.sendTeachOuts;
                     break;
                 default:
                     break;
@@ -202,6 +204,7 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
 
             updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.CONFIGURATION_PENDING, "starting rx thread...");
             transceiver.StartReceiving(scheduler);
+            logger.info("EnOceanSerialTransceiver RX thread up and running");
 
             if (c.rs485) {
                 if (c.rs485BaseId != null && !c.rs485BaseId.isEmpty()) {
@@ -240,6 +243,28 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
                                 }
                             }
                         });
+
+                if (c.getESPVersion() == ESPVersion.ESP3) {
+                    logger.debug("set postmaster mailboxes");
+                    transceiver.sendBasePacket(ESP3PacketFactory.SA_WR_POSTMASTER((byte) (c.enableSmack ? 20 : 0)),
+                            new ResponseListenerIgnoringTimeouts<BaseResponse>() {
+
+                                @Override
+                                public void responseReceived(BaseResponse response) {
+
+                                    logger.debug("received response for postmaster mailboxes");
+                                    if (response.isOK()) {
+                                        updateProperty("Postmaster mailboxes:",
+                                                Integer.toString(c.enableSmack ? 20 : 0));
+                                        smackAvailable = c.enableSmack;
+                                        refreshProperties();
+                                    } else {
+                                        updateProperty("Postmaster mailboxes:", "Not supported");
+                                        smackAvailable = false;
+                                    }
+                                }
+                            });
+                }
             }
 
             logger.debug("request version info");
@@ -285,7 +310,7 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
         Collection<ConfigStatusMessage> configStatusMessages = new LinkedList<>();
 
         // The serial port must be provided
-        String path = (String) getThing().getConfiguration().get(PATH);
+        String path = getThing().getConfiguration().as(EnOceanBridgeConfig.class).path;
         if (path == null || path.isEmpty()) {
             configStatusMessages.add(ConfigStatusMessage.Builder.error(PATH)
                     .withMessageKeySuffix(EnOceanConfigStatusMessage.PORT_MISSING.getMessageKey()).withArguments(PATH)
@@ -299,30 +324,33 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
         return baseId.clone();
     }
 
-    public int getNextSenderId(Thing sender) {
-        // TODO: change id to enoceanId
+    public boolean isSmackClient(Thing sender) {
+        return smackClients.contains(sender.getConfiguration().as(EnOceanBaseConfig.class).enoceanId);
+    }
+
+    public Integer getNextSenderId(Thing sender) {
         return getNextSenderId(sender.getConfiguration().as(EnOceanBaseConfig.class).enoceanId);
     }
 
-    public int getNextSenderId(String senderId) {
-        if (nextSenderId != 0 && sendingThings[nextSenderId] == null) {
-            int result = nextSenderId;
-            Configuration config = getConfig();
-            config.put(NEXTSENDERID, null);
-            updateConfiguration(config);
-            nextSenderId = 0;
+    public Integer getNextSenderId(String enoceanId) {
+        EnOceanBridgeConfig config = getConfigAs(EnOceanBridgeConfig.class);
 
-            return result;
+        if (config.nextSenderId != null && sendingThings[config.nextSenderId] == null) {
+            Configuration c = this.editConfiguration();
+            c.put(PARAMETER_NEXT_SENDERID, null);
+            updateConfiguration(c);
+
+            return config.nextSenderId;
         }
 
-        for (byte i = 1; i < sendingThings.length; i++) {
+        for (int i = 1; i < sendingThings.length; i++) {
             if (sendingThings[i] == null || sendingThings[i].getConfiguration().as(EnOceanBaseConfig.class).enoceanId
-                    .equalsIgnoreCase(senderId)) {
+                    .equalsIgnoreCase(enoceanId)) {
                 return i;
             }
         }
 
-        return -1;
+        return null;
     }
 
     public boolean existsSender(int id, Thing sender) {
@@ -347,7 +375,7 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
     }
 
     public void addPacketListener(PacketListener listener) {
-        addPacketListener(listener, listener.getSenderIdToListenTo());
+        addPacketListener(listener, listener.getEnOceanIdToListenTo());
     }
 
     public void addPacketListener(PacketListener listener, long senderIdToListenTo) {
@@ -357,7 +385,7 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
     }
 
     public void removePacketListener(PacketListener listener) {
-        removePacketListener(listener, listener.getSenderIdToListenTo());
+        removePacketListener(listener, listener.getEnOceanIdToListenTo());
     }
 
     public void removePacketListener(PacketListener listener, long senderIdToListenTo) {
@@ -366,12 +394,74 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
         }
     }
 
-    public void startDiscovery(PacketListener teachInListener) {
+    public void startDiscovery(TeachInListener teachInListener) {
         transceiver.startDiscovery(teachInListener);
+
+        if (smackAvailable) {
+            // activate smack teach in
+            logger.debug("activate smack teach in");
+            try {
+                transceiver.sendBasePacket(ESP3PacketFactory.SA_WR_LEARNMODE(true),
+                        new ResponseListenerIgnoringTimeouts<BaseResponse>() {
+
+                            @Override
+                            public void responseReceived(BaseResponse response) {
+
+                                if (response.isOK()) {
+                                    logger.debug("Smack teach in activated");
+                                }
+                            }
+                        });
+            } catch (IOException e) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                        "Smack packet could not be send: " + e.getMessage());
+            }
+        }
     }
 
     public void stopDiscovery() {
         transceiver.stopDiscovery();
+
+        try {
+            transceiver.sendBasePacket(ESP3PacketFactory.SA_WR_LEARNMODE(false), null);
+            refreshProperties();
+        } catch (IOException e) {
+            updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                    "Smack packet could not be send: " + e.getMessage());
+        }
+    }
+
+    private void refreshProperties() {
+        if (getThing().getStatus() == ThingStatus.ONLINE && smackAvailable) {
+
+            logger.debug("request learned smack clients");
+            try {
+                transceiver.sendBasePacket(ESP3PacketFactory.SA_RD_LEARNEDCLIENTS,
+                        new ResponseListenerIgnoringTimeouts<RDLearnedClientsResponse>() {
+
+                            @Override
+                            public void responseReceived(RDLearnedClientsResponse response) {
+
+                                logger.debug("received response for learned smack clients");
+                                if (response.isValid() && response.isOK()) {
+                                    LearnedClient[] clients = response.getLearnedClients();
+                                    updateProperty("Learned smart ack clients", Integer.toString(clients.length));
+                                    updateProperty("Smart ack clients",
+                                            Arrays.stream(clients)
+                                                    .map(x -> String.format("%s (MB Idx: %d)",
+                                                            HexUtils.bytesToHex(x.clientId), x.mailboxIndex))
+                                                    .collect(Collectors.joining(", ")));
+                                    smackClients = Arrays.stream(clients).map(x -> HexUtils.bytesToHex(x.clientId))
+                                            .collect(Collectors.toSet());
+                                }
+                            }
+                        });
+            } catch (IOException e) {
+                updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR,
+                        "Smack packet could not be send: " + e.getMessage());
+
+            }
+        }
     }
 
     @Override
@@ -379,5 +469,9 @@ public class EnOceanBridgeHandler extends ConfigStatusBridgeHandler implements T
         transceiver.ShutDown();
         transceiver = null;
         updateStatus(ThingStatus.OFFLINE, ThingStatusDetail.COMMUNICATION_ERROR, exception.getMessage());
+    }
+
+    public boolean sendTeachOuts() {
+        return sendTeachOuts;
     }
 }
